# TP-Final-MLOPS

1_dbt_postgres/: dbt_project.yml
2_ml_pipeline_project/: .env  pyproject.toml  requirements.txt
2_ml_pipeline_project/.tmp_dagster_home_1bek3dld/history/: runs.db
2_ml_pipeline_project/.tmp_dagster_home_1bek3dld/history/runs/: 5740339a-4389-4119-ba3c-6688f2659a9f.db  index.db
2_ml_pipeline_project/.tmp_dagster_home_1bek3dld/schedules/: schedules.db
2_ml_pipeline_project/.tmp_dagster_home_1bek3dld/storage/: keras_model1  preprocessed_training_data
2_ml_pipeline_project/.tmp_dagster_home_408ugul8/history/: runs.db
2_ml_pipeline_project/.tmp_dagster_home_408ugul8/history/runs/: index.db
2_ml_pipeline_project/.tmp_dagster_home_408ugul8/schedules/: schedules.db
2_ml_pipeline_project/.tmp_dagster_home_gm3j3p8n/history/: runs.db
2_ml_pipeline_project/.tmp_dagster_home_gm3j3p8n/schedules/: schedules.db
2_ml_pipeline_project/.tmp_dagster_home_qdu90st_/history/: runs.db
2_ml_pipeline_project/.tmp_dagster_home_qdu90st_/schedules/: schedules.db
2_ml_pipeline_project/dagster_project/: __init__.py  repositories.py  workspace.yaml
2_ml_pipeline_project/dagster_project/assets/: airbyte_assets.py  dbt_assets.py  evaluation_assets.py  preprocessing_assets.py  training_assets.py
2_ml_pipeline_project/dagster_project/jobs/: training_job.py
2_ml_pipeline_project/dbt/: .user.yml  dbt_project.yml  profiles.yml
2_ml_pipeline_project/dbt/models/: schema.yml  scores.sql  scores_movies_users.sql
2_ml_pipeline_project/mlruns/0/: meta.yaml
(+48 files in other folders)
